...
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <!-- Search Student Button (Advisor) -->
    <Button
        android:id="@+id/searchStudentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Search Student"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"
        android:onClick="goToSearchStudent"
...
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <!-- Profile Button (Student) -->
    <Button
        android:id="@+id/profileButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"
        android:onClick="goToProfile"
...
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <!-- View Saved Plans Button (Student) -->
    <Button
        android:id="@+id/viewSavedPlansButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="View Saved Plans"
        android:onClick="goToSavedPlans"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"
...
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <!-- View Chats Button (Student) -->
    <Button
        android:id="@+id/chatsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Friends"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"
        android:onClick="goToViewChats"
...
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>


    <!-- Log Out Button (at the bottom) (Both)-->
    <Button
        android:id="@+id/logOutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Log Out"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"
        android:onClick="goToLogOut"
...
