...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        android:layout_marginTop="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Iowa State Email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>
...
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Log In Button -->
    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:onClick="logIn"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"
...
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/logInButton"
        android:layout_marginTop="16dp" />

    <!-- Forgot password -->
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot password?"
        android:onClick="forgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="parent"
...
