...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/menuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/hamburger"
                android:onClick="goToMenu"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
...
                android:src="@drawable/cyplan_logo_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editProfileButton"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/icon_gear"
                android:onClick="modeSwitch"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="22dp"
...
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileImage" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:text="John Doe"
                android:textAlignment="center"
...
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goToSavedPlansButton" />

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/dark_green"
                android:text="Change Password"
                android:visibility="gone"
...
